--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -55,7 +55,7 @@
           {{ . | markdownify }}
         {{ else }}
           {{ if .Truncated }}
-            {{ .Summary }}
+            >>>> {{ .Summary }}
             <div><a class="read-more button" href="{{.RelPermalink}}">{{ $.Site.Params.ReadMore | default "Read more" }} →</a></div>
           {{ end }}
         {{ end }}
